--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
   "homepage": "https://github.com/ekpo-d/progress#readme",
   "dependencies": {
     "bcrypt": "^1.0.3",
+    "bitx": "^1.5.1",
     "body-parser": "^1.18.2",
     "chalk": "^1.1.3",
     "cookie-parser": "^1.4.3",
